--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -2,18 +2,21 @@ version: '3'
 services:
   db:
     build:
-      context: /database/
+      context: /database/ 
       dockerfile: Dockerfile
-    # image: 
+    # image: cloudnice/alpine-postgres
     restart: always
     environment:
-      POSTGRES_PASSWORD: "Pp123456789"
+      POSTGRES_PASSWORD: ./db_password.txt
+      # POSTGRES_PASSWORD: "Pp123456789"
     networks:
       - mynet
+    volumes:
+      - myvolume:/var/lib/postgresql/data
 
 
   server:
-    # image: 
+    # image: cloudnice/dockercompose-pern-server
     build:
       context: /server/
       dockerfile: Dockerfile
@@ -26,7 +29,7 @@ services:
       - mynet
 
   client:
-    # image: 
+    # image: cloudnice/dockercompose-pern-server
     build:
       context: /client/
       dockerfile: Dockerfile
@@ -42,4 +45,9 @@ networks:
   mynet:
     driver: bridge
 
+volumes:
+  myvolume:
 
+secrets:
+  db_password:
+    file: ./db_password.txt
